--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 		 
                                 
          <div class="image-holder one" id="pic_prof_1" style="display:block">
-        
+                <!-- Temporary fix - Replaced all image names to the the only existing image -->
                 <img class="head-image up circle" src="images/img/new.jpg" width="150" height="150" alt="" />
                 <img class="head-image up-left circle" src="images/img/new.jpg" width="150" height="150" alt="" />
                 <img class="head-image left circle" src="images/img/new.jpg" width="150" height="150" alt="" />
